# Social-Media-Analytics-Insights

./: .dockerignore  Dockerfile  Jenkinsfile  Processed_Students_Social_Media_Addiction.csv  README.md  _quick_model_check.py  app.py  app1.py  preprocessor.py  pyproject.toml  requirements.txt  scala.txt  setup.py
